# test_script_omplapp

./: CMakeLists.txt  README.md  package.xml
examples/: piano.cpp
ompl_data/3D/: Apartment_robot.urdf
